CORS configured and Tested